--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,16 @@
 .container {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    /* justify-content: center; */
+    gap: 10px;
+}
+
+.header {
+    display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .board {
@@ -9,6 +18,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    font-size: 36px;
+    font-weight: 700;
 }
 
 .square {
@@ -19,3 +30,8 @@
     height: 100px;
     width: 100px;
 }
+
+/* .form {
+    justify-content: center;
+    align-items: center;
+} */
